--- a/CSS praticing project/css/style.css
+++ b/CSS praticing project/css/style.css
@@ -1,14 +1,18 @@
 html {
     font-size: 22px;
+    background-color: var(--BG-COLOR);
+    background-image:linear-gradient(var(--BG-COLOR),#facc70);
 }
 
 body {
     min-height: 100vh;
-    max-width: 800px;
-    margin: 0 auto;
     padding: 1rem;
+    margin: 0;
+    padding: 0;
     border-left: 1px solid #333;
     border-right: 1px solid #333;
+    background-color: white;
+    width:60%;
 }
 
 th, td, caption {
@@ -16,4 +20,20 @@ th, td, caption {
     font-family: 'Courier New', Courier, monospace;
     border-collapse: separate;
     padding: 0.5rem;
+}
+
+:root{
+    --BG-COLOR:#fabc3f;
+    --HEADER-COLOR:black;
+    --HEADER-TEXT-COLOR:rgb(255, 240, 200);
+}
+
+header{
+    background: var(--HEADER-COLOR);
+    color: white;
+}
+.navbar li{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
 }
